Added texas-holdem game type feature